--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="styles.css" rel="stylesheet">
-    <script src="script.js" defer></script>
 
     <title>Fishing: the game</title>
 
@@ -53,6 +52,6 @@
     
 
 
-
+    <script src="script.js"></script>
 </body>
 </html>
