improve loading screen
add preload for more large files, update the style of the loading bar

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
     <!-- loading -->
     <div id="loading-screen">
+        <div id="loading-text">Loading...</div>
         <div id="loadbar-container">
             <div id="loadbar"></div>
         </div>
