--- a/index.html
+++ b/index.html
@@ -5,12 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="styles.css" rel="stylesheet">
-
     <title>Fishing: the game</title>
-
 </head>
 <body>
-    <!-- loading -->
+    <!-- loading screen-->
     <div id="loading-screen">
         <div id="loading-text">Loading...</div>
         <div id="loadbar-container">
@@ -18,10 +16,10 @@
         </div>
     </div>
 
-<!-- затемнение -->
+<!-- darkens the screen when needed -->
     <div id="dark"></div>
 
-    <!-- first modal -->
+    <!-- Language choosing modal -->
    <div id = "modal1"> 
         <div id="modal1_up"> <p>Choose the languauge <br> Выберите язык</p></div>
         <div id="modal1_down">
@@ -31,7 +29,7 @@
     </div>
 
 
-    <!-- second modal -->
+    <!-- Difficulty choosing modal -->
     <div id = "modal2"> 
         <div id="modal2_up">
             <div class="buttonRulesDiv"><button id="buttonRules" class="button1" onclick="showRules()"></button></div>
@@ -39,11 +37,12 @@
         <div id="modal2_middle"></div>
         <div id="modal2_down">
             <div id="buttonEasyDiv" class="buttonDiv2">  <button id = 'buttonEasy' class="button" onclick="setDifficulty('easy')">легко</button></div>
-            <div id="buttonMediumDiv" class="buttonDiv2"> <button id = 'buttonMedium' class="button" onclick="setDifficulty('medium')">норм</button>  </div>
+            <div id="buttonMediumDiv" class="buttonDiv2"> <button id = 'buttonMedium' class="button" onclick="setDifficulty('normal')">норм</button>  </div>
             <div id="buttonHardDiv" class="buttonDiv2"> <button id = 'buttonHard' class="button" onclick="setDifficulty('hard')">сложно</button> </div>
         </div>
     </div>
-    <!-- rules modal -->
+
+    <!-- Rules explanation modal; hidden by default -->
     <div id="modal_rules">
         <div id="modal_rules1"></div>
         <div id="modal_rules2">
@@ -51,19 +50,67 @@
         </div>
     </div>
 
+    <!-- the canvas itself and the div hiding it before the game start -->
     <div id="canvasCurtain"> </div>
     <canvas id = "canvas1"></canvas>
 
 
-    <!-- restart query -->
-    <div id="restart_">
-        <div id="restart_question"> </div>
-        <div id="restart_button_space"> 
-            <div class="buttonRulesDiv"><button id="restart_button" class="button1" onclick="restart()"></button>  </div>
+    <!-- restart + scoreboard-->
+    <div id="restart_main">
+
+        <!-- modal at the top when one looses; offers to restart/save the score/rate the game -->
+        <div id="restart_">
+            <div id="restart_question"> </div>
+            <div id="restart_button_space"> 
+                <div class="buttonRulesDiv"><button id="restart_button" class="button1" onclick="restart()"></button></div>
+                <div class="buttonRulesDiv"><button id="savescore-request-btn" class="button1" onclick= requestSaveScore() style="font-size: 1.2rem;">Save score</button>  </div>
+                <div class="buttonRulesDiv"><button id="rate-button" class="button1" style="font-size: 1rem;">Rate the game</button>  </div>
+            </div> 
+        </div>
+
+            <!-- scoreboard appears with 1 sec delay after the player looses-->
+        <div id="scoreboard-main">
+            <div id="scoreboard-title">Scoreboard</div>
+            <div id="difficulty-titles">
+                <div id="scoreboard-easy-title">Easy</div>
+                <div id="scoreboard-normal-title">Normal</div>
+                <div id="scoreboard-hard-title">Hard</div>
+            </div>
+            <div id="scoreboard-container">
+                    <!-- firebase data is inserted to these -->
+                <div class = 'scoreboard' id="scoreboard-easy"></div>
+                <div class = 'scoreboard' id="scoreboard-normal"></div>
+                <div class = 'scoreboard' id="scoreboard-hard"></div>
+            </div>
         </div>
     </div>
-    
-    <script src="./script.js"></script>
+
+    <!-- darkens the screen and modals -->
+    <div id="savescore-dark"></div>
+
+    <!-- asks for the name to compete the score submission -->
+    <div id="savescore-main">
+        <div id="savescore-text">Enter your name to save the score</div>
+        <div id="savescore-input-container">
+            <input id="name" type="text"></input>
+        </div>
+        <div id="savescore-send-container">
+            <div class="buttonRulesDiv" id="button-savescore-final-div"><button id="savescore-final-btn" class="button1" style="font-size: 1.2rem;">Save score</button>  </div>
+        </div>
+    </div>
+
+
+<script type="text/javascript" src="https://www.gstatic.com/firebasejs/6.3.4/firebase-app.js"></script>
+<script type="text/javascript" src="https://www.gstatic.com/firebasejs/6.3.4/firebase-database.js"></script>
+<script src="./preload.js"></script>
+<script src="./database.js"></script>
+<script src="./script.js"></script>
+<script src="./background.js"></script>
+<script src="./hook.js"></script>
+<script src="./player.js"></script>
+<script src="./corn.js"></script>
+<script src="./localization.js"></script>
+<script src="./difficulty.js"></script>
     
 </body>
 </html>
