Adapt for low-resolution screens; fix the bug in fonts display

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
             <div id="restart_question"> </div>
             <div id="restart_button_space"> 
                 <div class="buttonRulesDiv"><button id="restart_button" class="button1" onclick="restart()"></button></div>
-                <div class="buttonRulesDiv"><button id="savescore-request-btn" class="button1" onclick= requestSaveScore() style="font-size: 1.2rem;">Save score</button>  </div>
-                <div class="buttonRulesDiv"><button id="rate-button" class="button1" style="font-size: 1rem;">Rate the game</button>  </div>
+                <div class="buttonRulesDiv"><button id="savescore-request-btn" class="button1" onclick= requestSaveScore() style="font-size: 0.8em;">Save score</button>  </div>
+                <div class="buttonRulesDiv"><button id="rate-button" class="button1" style="font-size: 0.7em;">Rate the game</button>  </div>
             </div> 
         </div>
 
@@ -95,7 +95,7 @@
             <input id="name" type="text"></input>
         </div>
         <div id="savescore-send-container">
-            <div class="buttonRulesDiv" id="button-savescore-final-div"><button id="savescore-final-btn" class="button1" style="font-size: 1.2rem;">Save score</button>  </div>
+            <div class="buttonRulesDiv" id="button-savescore-final-div"><button id="savescore-final-btn" class="button1" style="font-size: 0.9em;">Save score</button>  </div>
         </div>
     </div>
 
