Remove not working files

--- a/public/index.html
+++ b/public/index.html
@@ -131,7 +131,7 @@
     </div>
 
     <div id="rate-main">
-        <div id="rate-text-1" loc = 'rate-text-1'>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, consectetur!</div>
+        <div id="rate-text-1" loc = 'rate-text-1'></div>
         <div id="rate-buttons-container">
             <div class = 'rate-button' id="rate-button-good" loc= 'rate-good'></div>
             <div class = 'rate-button' id="rate-button-bad" loc= 'rate-bad'></div>
@@ -139,7 +139,7 @@
     </div>
 
     <div id="rate-good-main">
-        <div id="rate-good-text" loc="rated-good">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit illum laborum reiciendis earum, vero quisquam vitae ut itaque porro harum! Eum recusandae totam dolor error deleniti libero commodi dicta modi.</div>
+        <div id="rate-good-text" loc="rated-good"></div>
         <div id="textarea-container">
             <textarea maxlength="4000" class = 'review' id="good-review"></textarea>
         </div>
@@ -160,7 +160,7 @@
 <script type="text/javascript" src="https://www.gstatic.com/firebasejs/6.3.4/firebase-database.js"></script>
 <script src="./preload.js"></script>
 <script src="./database.js"></script>
-<script src="./script.js"></script>
+<script src="./script2.js"></script>
 <script src="./functions.js"></script>
 
 <script src="./background.js"></script>
