--- a/public/index.html
+++ b/public/index.html
@@ -160,7 +160,7 @@
 <script type="text/javascript" src="https://www.gstatic.com/firebasejs/6.3.4/firebase-database.js"></script>
 <script src="./preload.js"></script>
 <script src="./database.js"></script>
-<script src="./script2.js"></script>
+<script src="./main.js"></script>
 <script src="./functions.js"></script>
 
 <script src="./background.js"></script>
